// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert error 1`] = `
<div
  className="flex items-center bg-error border-l-4 border-error-darkest text-error-dark py-2 min-w-full"
>
  <div
    className="px-2"
  >
    <svg
      aria-hidden="true"
      className="w-6 h-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </div>
  <div>
    <p
      className="font-semibold"
    >
      My title
    </p>
    <p>
      My description
    </p>
  </div>
</div>
`;

exports[`Alert success 1`] = `
<div
  className="flex items-center bg-success border-l-4 border-success-darkest text-success-dark py-2 min-w-full"
>
  <div
    className="px-2"
  >
    <svg
      aria-hidden="true"
      className="w-6 h-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </div>
  <div>
    <p
      className="font-semibold"
    >
      My title
    </p>
    <p>
      My description
    </p>
  </div>
</div>
`;

exports[`Alert warning 1`] = `
<div
  className="flex items-center bg-warning border-l-4 border-warning-darkest text-warning-dark py-2 min-w-full"
>
  <div
    className="px-2"
  >
    <svg
      aria-hidden="true"
      className="w-6 h-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </div>
  <div>
    <p
      className="font-semibold"
    >
      My title
    </p>
    <p>
      My description
    </p>
  </div>
</div>
`;
